Menu button functionality.  Updated LogOutButton for the purose of a menu list item.  Updated some basic styling for Grid sizes on calendar view and app - added padding top and bottom to correct nav overlap

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -21,6 +21,8 @@ img {
   background-repeat: no-repeat;
   background-attachment: fixed;
   min-height: 100%;
+  padding-bottom: 65px;
+  padding-top: 10px;
 }
 
 @media only screen and (min-width: 500px) {
